transaction table part 1
